# wrt-cli

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
assets/: discover.txt  wrt-discovery.schema.json
src/: cli.rs  codex.rs  completions.rs  db.rs  gitx.rs  main.rs  pm.rs  state.rs  supabase.rs  ui.rs  util.rs  worktree.rs
src/cmd/: db.rs  env.rs  init.rs  ls.rs  mod.rs  new.rs  prune.rs  rm.rs  run.rs
tests/: cli.rs  codex_e2e.rs
