[package]
name = "wrt"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
